tp4/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap');

body{
background: linear-gradient(to left, #000000aa, #2f0061);
color: rgb(224, 248, 248);
font-family: "Fascinate Inline", system-ui;
font-style: normal;


}


 table, th, td {
  border: 1px solid;
}


p.right{
  text-align: right;
}
h1{
    font-size: 24pt;
    text-align: center;

  position: relative;
}
h2{
  font-size: 18pt;
  color: rgb(188, 188, 220);
}

h3{
  font-size: 16pt;

}

